@@ -11,7 +11,8 @@
   API cleanup is finished; set_raw_hook is gone. JSON timestamps in TPV and
   SKY are now ISO8601 rather than seconds since the Unix epoch. GPGST sentences
   are now parsed for noise statistics when a device emits them.  AIS and
-  RTCM2 JSON dumps have device fields.
+  RTCM2 JSON dumps have device fields. gpsdecode can now dump NMEA
+  and GPS binary data to JSON.
 
 * Tue Jul 13 2010 Eric S. Raymond <esr@snark.thyrsus.com> - 2.95
   The autonomous robot submarine total world domination release!
